tests/data-clumps/test-cases/parameter-parameter/simple/positive/java/source/BillingProcessor.java
public class BillingProcessor {
    public void createInvoice(int patientId, int doctorId, boolean requiresFollowUp) {
        System.out.println("Creating invoice for patient " + patientId + " and doctor " + doctorId
                + " (requires follow-up: " + requiresFollowUp + ")");
    }
}
